Add real api call

--- a/src/components/ui/AnimalViewer/AnimalViewer.scss
+++ b/src/components/ui/AnimalViewer/AnimalViewer.scss
@@ -30,6 +30,7 @@
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.5s;
+    outline: none;
 
     &:hover {
       background-color: lightseagreen;
